<resources>
    <string name="app_name">Chicago Roboto</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="status_in_progress">This session is in progress</string>
    <string name="status_over">This session is over</string>
    <string name="action_schedule">Schedule</string>
    <string name="action_speakers">Speakers</string>
    <string name="action_location">Location</string>
    <string name="action_info">Info</string>

    <!-- Licensing -->
    <string name="google_maps">Google Maps</string>
    <string name="glide">Glide</string>
    <string name="info_topper">Brought to you with the help of these Open Source projects</string>
    <string name="feedback_title">How would you rate this session?</string>
    <string name="feedback_session">Overall session experience:</string>
    <string name="feedback_content">Technical level of the session content:</string>
    <string name="feedback_speaker">Presentation skills of the speaker:</string>
    <string name="cancel">cancel</string>
    <string name="submit">Submit</string>
  <string name="cd_logo">Event Logo</string>
</resources>
